Fix image references

--- a/jikook/moment.html
+++ b/jikook/moment.html
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-light bg-warning mb-4">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="~/images/logo.png" style="height: 30px; width: auto;" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="/images/logo.png" style="height: 30px; width: auto;" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
                 aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -141,42 +141,42 @@
             <div id="photos-collapse" class="collapse show">
                 <div class="d-flex align-items-start flex-wrap">
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_rectangle_2.jpg" alt="..." class="w-100" />
+                        <img src="/images/jk_rectangle_2.jpg" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">JK thumbs up safdsdfsf dsdfsdf sf </figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_rectangle.jpg" alt="..." class="w-100" />
+                        <img src="/images/jk_rectangle.jpg" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">This is another caption that's honestly kinda llong,
                             but that's what testing is for</figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_thumbsup.png" alt="..." class="w-100" />
+                        <img src="/images/jk_thumbsup.png" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">JK thumbs up</figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_rectangle_2.jpg" alt="..." class="w-100" />
+                        <img src="/images/jk_rectangle_2.jpg" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">JK thumbs up safdsdfsf dsdfsdf sf </figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_rectangle.jpg" alt="..." class="w-100" />
+                        <img src="/images/jk_rectangle.jpg" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">This is another caption that's honestly kinda llong,
                             but that's what testing is for</figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_thumbsup.png" alt="..." class="w-100" />
+                        <img src="/images/jk_thumbsup.png" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">JK thumbs up</figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_rectangle_2.jpg" alt="..." class="w-100" />
+                        <img src="/images/jk_rectangle_2.jpg" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">JK thumbs up safdsdfsf dsdfsdf sf </figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_rectangle.jpg" alt="..." class="w-100" />
+                        <img src="/images/jk_rectangle.jpg" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">This is another caption that's honestly kinda llong,
                             but that's what testing is for</figcaption>
                     </figure>
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_thumbsup.png" alt="..." class="w-100" />
+                        <img src="/images/jk_thumbsup.png" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">JK thumbs up</figcaption>
                     </figure>
                 </div>
@@ -192,7 +192,7 @@
             <div id="videos-collapse" class="collapse show">
                 <div class="d-flex align-items-start flex-wrap">
                     <figure class="figure img-thumbnail m-1" style="width:150px">
-                        <img src="~/images/jk_rectangle.jpg" alt="..." class="w-100" />
+                        <img src="/images/jk_rectangle.jpg" alt="..." class="w-100" />
                         <figcaption class="small text-secondary">This is another caption that's honestly kinda llong,
                             but that's what testing is for</figcaption>
                     </figure>
@@ -229,7 +229,7 @@
         <div class="container"></div>
         <nav class="navbar navbar-expand-sm navbar-light bg-warning">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="~/images/logo.png" style="height: 30px; width: auto;"
+                <a class="navbar-brand" href="#"><img src="/images/logo.png" style="height: 30px; width: auto;"
                         alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
                     aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
