--- a/jikook/moment.html
+++ b/jikook/moment.html
@@ -18,6 +18,7 @@
         }
         .sources div {
             margin: -1px 0 0 -1px;
+            word-wrap: break-word;
         }
     </style>
 </head>
