Combine two prototypes

--- a/gom/footer.html
+++ b/gom/footer.html
@@ -1,5 +1,9 @@
 <div class="footer mt-auto py-3">
-    <div class="container">
-        <span class="text-muted">copyright &copy; 2019 wiz</span>
-    </div>
+    <footer class="container">
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2019 wiznaibus &middot;
+            <a href="/support/privacy.html">Privacy</a> &middot;
+            <a href="/support/terms.html">Terms</a> &middot;
+            <a href="/support/support.html">Support</a></p>
+    </footer>
 </div>
