--- a/gom/header.html
+++ b/gom/header.html
@@ -43,9 +43,24 @@
                     <a class="nav-link" href="gom-dashboard.html">Group Orders</a>
                 </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Logout</button>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
             </form>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false"><img
+                            class="top-timeline-tweet-box-user-image avatar size32" src="/images/avatar.jpg"
+                            style="width:28px; height:28px; border-radius: 50%;" alt="wiznaibus"></a>
+                    <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdown01">
+                        <h6 class="dropdown-header">Welcome, wiznaibus</h6>
+                        <a class="dropdown-item" href="/account/index.html">Account</a>
+                        <a class="dropdown-item" href="/orders/create.html">New Group Order</a>
+                        <a class="dropdown-item" href="/login.html">Log Out</a>
+                    </div>
+                </li>
+            </ul>
         </div>
     </nav>
 </header>
