--- a/gom/sidebar.html
+++ b/gom/sidebar.html
@@ -8,10 +8,10 @@
         </h6>
         <ul class="nav flex-column mb-2">
             <li class="nav-item">
-                <a class="nav-link" href="gom-dashboard.html">Buyer Dashboard</a>
+                <a class="nav-link" href="go-dashboard.html">Buyer Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="go-summary.html">Sample Group Order</a>
+                <a class="nav-link" href="go-summary.html">Sample Group Order (as Buyer)</a>
             </li>
         </ul>
 
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="gom-dashboard.html">Seller Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="go-summary.html">Sample Group Order</a>
+                <a class="nav-link" href="gom-summary.html">Sample Group Order</a>
             </li>
         </ul>
     </div>
