--- a/gom/footer.html
+++ b/gom/footer.html
@@ -1,9 +1,9 @@
-<div class="footer mt-auto py-3">
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2019 wiznaibus &middot;
-            <a href="/support/privacy.html">Privacy</a> &middot;
-            <a href="/support/terms.html">Terms</a> &middot;
-            <a href="/support/support.html">Support</a></p>
-    </footer>
-</div>
+<footer class="footer pt-4">
+    <div class=" mt-auto py-3 border-top pt-3">
+        <p class="float-right">
+            <a href="about.html">About</a> &middot;
+            <a href="help.html">Help</a>
+        </p>
+        <p>&copy; 2019 wiznaibus</p>
+    </div>
+</footer>
