--- a/gom/index.html
+++ b/gom/index.html
@@ -26,7 +26,6 @@
 
 <body>
   <header id="header"></header>
-  <div class="container">
 
     <main role="main" id="body">
       <div class="jumbotron">
@@ -52,8 +51,7 @@
           <div class="col-md-4">
             <h2>Sell</h2>
             <p>Donec id elit non mi porta gravida at eget metus. You're one of the people who likes having way too much
-              work to do and selling this shit. And for what? So people can have access to it without paying ridiculous
-              amounts of money. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              work to do and selling this shit. And for what? So people can buy this shit, or because you're a masochist. We may never know. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
             <p><a class="btn btn-secondary" href="#" role="button">Create Group Order <i
                   class="fas fa-angle-right"></i></a></p>
           </div>
@@ -66,14 +64,13 @@
                   class="fas fa-angle-right"></i></a></p>
           </div>
         </div>
-
-        <hr>
-
       </div>
     </main>
 
-    <footer id="footer"></footer>
-  </div>
+    <div class="container">
+        <footer id="footer"></footer>
+    </div>
+    
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
