--- a/gom/go-dashboard.html
+++ b/gom/go-dashboard.html
@@ -139,7 +139,7 @@
     $(function () {
       $("#header").load("header.html");
       $("#footer").load("footer.html");
-      $("#sidebar").load("sidebar.html");
+      $("#sidebar").load("gom-sidebar.html");
     });
   </script>
 </body>
