--- a/gom/gom-dashboard.html
+++ b/gom/gom-dashboard.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="dashboard.css" rel="stylesheet">
   <title>wizGOM</title>
 </head>
@@ -16,115 +17,113 @@
   <header id="header"></header>
 
   <div class="container-fluid">
-    <div class="row">
 
-      <div id="sidebar"></div>
+    <div id="sidebar"></div>
 
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <div
-          class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-          <h1 class="h2">Dashboard</h1>
-        </div>
-        <h3>Manager Profile</h3>
-        <div class="row">
-            <div class="col">
-                <table class="table table-borderless table-sm small bg-light">
-                    <tr>
-                        <th scope="row">Name:</th>
-                        <td>wiznaibus</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="col">
-                <table class="table table-borderless table-sm small bg-light">
-                    <tr>
-                        <th scope="row">Id:</th>
-                        <td><a href="#">wiz-00068465</a></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Joined:</th>
-                        <td>April 3, 2018</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Completed Group Orders:</th>
-                        <td>1</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="col">
-                <table class="table table-borderless table-sm small bg-light">
-                    <tr>
-                        <th scope="row">Esteem:</th>
-                        <td><a href="#">14</a></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Reviews:</th>
-                        <td><a href="#">2</a></td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-        <h3>My Group Orders</h3>
-        <div class="table-responsive">
-          <table class="table table-striped table-sm">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Date</th>
-                <th>Info</th>
-                <th>Status</th>
-                <th>Slots</th>
-                <th>Quick Stats</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>524</td>
-                <td>2019/02/15</td>
-                <td>Lights/BWL Japanese Album</td>
-                <td>Gauging Interest</td>
-                <td>2/50</td>
-                <td>
-                    <i class="fas fa-dollar-sign text-light"></i>
-                    <i class="fas fa-ship text-light"></i>
-                    <i class="fas fa-shipping-fast text-light"></i>
-                    <i class="fas fa-comments text-light"></i>
-                </td>
-              </tr>
-              <tr>
-                <td>506</td>
-                <td>2019/02/02</td>
-                <td>Speak Yourself Europe & New York (DVD only)</td>
-                <td>Awaiting Items</td>
-                <td>9/10</td>
-                <td>
-                    <i class="fas fa-dollar-sign text-success"></i>
-                    <i class="fas fa-ship text-warning"></i>
-                    <i class="fas fa-shipping-fast text-light"></i>
-                    <i class="fas fa-comments text-light"></i>
-                </td>
-              </tr>
-              <tr>
-                <td>399</td>
-                <td>2018/06/17</td>
-                <td>Love Yourself Her Albums</td>
-                <td>Completed</td>
-                <td>62/60</td>
-                <td>
-                    <i class="fas fa-dollar-sign text-success"></i>
-                    <i class="fas fa-ship text-success"></i>
-                    <i class="fas fa-shipping-fast text-success"></i>
-                    <i class="fas fa-comments text-success"></i>
-                </td>
-              </tr>
-
-            </tbody>
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+      <div
+        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <h1 class="h2">Dashboard</h1>
+      </div>
+      <h3>Manager Profile</h3>
+      <div class="row">
+        <div class="col">
+          <table class="table table-borderless table-sm small bg-light">
+            <tr>
+              <th scope="row">Name:</th>
+              <td>wiznaibus</td>
+            </tr>
           </table>
         </div>
-        <footer id="footer"></footer>
-      </main>
-    </div>
+        <div class="col">
+          <table class="table table-borderless table-sm small bg-light">
+            <tr>
+              <th scope="row">Id:</th>
+              <td><a href="#">wiz-00068465</a></td>
+            </tr>
+            <tr>
+              <th scope="row">Joined:</th>
+              <td>April 3, 2018</td>
+            </tr>
+            <tr>
+              <th scope="row">Completed Group Orders:</th>
+              <td>1</td>
+            </tr>
+          </table>
+        </div>
+        <div class="col">
+          <table class="table table-borderless table-sm small bg-light">
+            <tr>
+              <th scope="row">Esteem:</th>
+              <td><a href="#">14</a></td>
+            </tr>
+            <tr>
+              <th scope="row">Reviews:</th>
+              <td><a href="#">2</a></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+
+      <h3>My Group Orders</h3>
+      <div class="table-responsive">
+        <table class="table table-striped table-sm">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Date</th>
+              <th>Info</th>
+              <th>Status</th>
+              <th>Slots</th>
+              <th>Quick Stats</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>524</td>
+              <td>2019/02/15</td>
+              <td><a href="gom-summary.html">Lights/BWL Japanese Album</a></td>
+              <td>Gauging Interest</td>
+              <td>2/50</td>
+              <td>
+                <i class="fas fa-dollar-sign text-light"></i>
+                <i class="fas fa-reply text-light"></i>
+                <i class="fas fa-shipping-fast text-light"></i>
+                <i class="fas fa-comments text-light"></i>
+              </td>
+            </tr>
+            <tr>
+              <td>506</td>
+              <td>2019/02/02</td>
+              <td>Speak Yourself Europe & New York (DVD only)</td>
+              <td>Awaiting Items</td>
+              <td>9/10</td>
+              <td>
+                <i class="fas fa-dollar-sign text-success"></i>
+                <i class="fas fa-reply text-warning"></i>
+                <i class="fas fa-shipping-fast text-light"></i>
+                <i class="fas fa-comments text-light"></i>
+              </td>
+            </tr>
+            <tr>
+              <td>399</td>
+              <td>2018/06/17</td>
+              <td>Love Yourself Her Albums</td>
+              <td>Completed</td>
+              <td>62/60</td>
+              <td>
+                <i class="fas fa-dollar-sign text-success"></i>
+                <i class="fas fa-reply text-success"></i>
+                <i class="fas fa-shipping-fast text-success"></i>
+                <i class="fas fa-comments text-success"></i>
+              </td>
+            </tr>
+
+          </tbody>
+        </table>
+      </div>
+      <footer id="footer"></footer>
+    </main>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
@@ -139,7 +138,7 @@
     $(function () {
       $("#header").load("header.html");
       $("#footer").load("footer.html");
-      $("#sidebar").load("sidebar.html");
+      $("#sidebar").load("gom-sidebar.html");
     });
   </script>
 </body>
