--- a/gom/header.html
+++ b/gom/header.html
@@ -42,6 +42,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="gom-dashboard.html">Group Orders</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="msg-inbox.html">Messages</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -51,13 +54,12 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false"><img
-                            class="top-timeline-tweet-box-user-image avatar size32" src="/images/avatar.jpg"
+                            class="top-timeline-tweet-box-user-image avatar size32" src="images/avatar.jpg"
                             style="width:28px; height:28px; border-radius: 50%;" alt="wiznaibus"></a>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdown01">
                         <h6 class="dropdown-header">Welcome, wiznaibus</h6>
-                        <a class="dropdown-item" href="/account/index.html">Account</a>
-                        <a class="dropdown-item" href="/orders/create.html">New Group Order</a>
-                        <a class="dropdown-item" href="/login.html">Log Out</a>
+                        <a class="dropdown-item" href="account.html">Account</a>
+                        <a class="dropdown-item" href="login.html">Sign out</a>
                     </div>
                 </li>
             </ul>
